@@ -139,7 +139,9 @@ help:
 	$(MAKE) -f "$(BASEDIR)/make/configure.mk" $(@) VERBOSE="$(VERBOSE)"
 	echo ""
 	echo "Available FEATURES:"
+	echo "  clap                      CLAP plugins"
 	echo "  doc                       Generate standalone HTML documentation"
+	echo "  gst                       GStreamer plugins"
 	echo "  jack                      Standalone JACK plugins"
 	echo "  ladspa                    LADSPA plugins"
 	echo "  lv2                       LV2 plugins"
